hphp/hack/test/typecheck/enum_stringish_bad_1.php.like_types.exp
File "enum_stringish_bad_1.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
File "enum_stringish_bad_1.php", line 9, characters 22-30:
Expected Stringish
File "enum_stringish_bad_1.php", line 9, characters 15-15:
But got dynamic because it is an unenforceable type
